--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ copyright: 'Copyright (c) Grafite Inc'
 
 # Documentation and theme
 docs_dir: 'markdown'
+site_dir: '../websites/docs'
 theme:
   name: 'material'
   palette:
